<resources>
    <string name="app_name">DefineXCase</string>
    <string name="tab_home">Keşfet</string>
    <string name="tab_book">Kitap</string>
    <string name="tab_basket">Sepet</string>
    <string name="tab_fav">Favoriler</string>
    <string name="tab_profile">Profil</string>
    <string name="case_study">Definex Case Study</string>
    <string name="email">E-mail Adresi</string>
    <string name="password">Şifreniz</string>
    <string name="email_error">E-mail Adresinizi Kontrol Edin Lütfen</string>
    <string name="password_error">Şifreniz çok kısa</string>
    <string name="login">Giriş Yap</string>
    <string name="forgot_my_password">Şifremi Unuttum</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="login_error">Kullanıcı adı veya şifre yanlış!</string>
    <string name="NA">NA</string>
    <string name="home">Ana Sayfa</string>
    <string name="internet_connection_error">Görünüşe göre internete bağlantınız yok, güncel verileri görüntüleyemezsiniz.</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="soon">Yakında</string>
    <string name="empty_login_error">Email ve şifrenizi girdiğinizden emin olun!</string>
</resources>