<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/tab_home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_tab_book"

        android:title="@string/tab_book" />

    <item
        android:id="@+id/nav_shopping_cart"
        android:icon="@drawable/ic_tab_basket"
        android:title="@string/tab_basket" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_tab_heart"
        android:title="@string/tab_fav" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_tab_profile"
        android:title="@string/tab_profile" />

</menu>